syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message Sum {
  int32 first_value = 1;
  int32 second_value = 2;
}

message SumRequest {
  Sum sum = 1;
}

message SumResponse {
  int32 result = 1;
}

service SumService {
  // Unary
  rpc Sum(SumRequest) returns (SumResponse) {};
}
